# Caterpillar

./: .gitignore  CMakeLists.txt  main.cpp
SDL2/include/: SDL_video.h
libs/: caterpillar.cpp  caterpillar.h  color_functions.cpp  color_functions.h  complex_functions.cpp  complex_functions.h  graphic_functions.cpp  graphic_functions.h
